--- a/04-homework/last_fm_api.ipynb
+++ b/04-homework/last_fm_api.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apikey = 'c10f2d77c46219c362adbdb3e0e20504'"
+    "apikey = '###'"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.search&artist=lil&api_key=c10f2d77c46219c362adbdb3e0e20504&limit=50&format=json'\n",
+    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.search&artist=lil&api_key={apikey}&limit=50&format=json'\n",
     "\n",
     "response = requests.get(url)\n",
     "data = response.json()"
@@ -543,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2&api_key=c10f2d77c46219c362adbdb3e0e20504&format=json'\n",
+    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2&api_key={apikey}&format=json'\n",
     "\n",
     "response = requests.get(url)\n",
     "data = response.json()"
@@ -634,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.search&artist=lil&api_key=c10f2d77c46219c362adbdb3e0e20504&limit=50&format=json'\n",
+    "url = 'http://ws.audioscrobbler.com/2.0/?method=artist.search&artist=lil&api_key={apikey}&limit=50&format=json'\n",
     "\n",
     "response = requests.get(url)\n",
     "data = response.json()"
@@ -808,7 +808,7 @@
    ],
    "source": [
     "for mbid in mbids:\n",
-    "    print(f\"http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid={mbid}&api_key=c10f2d77c46219c362adbdb3e0e20504&format=json\")"
+    "    print(f\"http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid={mbid}&api_key={apikey}&format=json\")"
    ]
   },
   {
@@ -915,7 +915,7 @@
     "urls = []\n",
     "    \n",
     "for mbid in mbids:\n",
-    "    url = (f\"http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid={mbid}&api_key=c10f2d77c46219c362adbdb3e0e20504&format=json\")\n",
+    "    url = (f\"http://ws.audioscrobbler.com/2.0/?method=artist.getInfo&mbid={mbid}&api_key={apikey}&format=json\")\n",
     "    urls.append(url)\n",
     "\n",
     "# print(urls)"
