--- a/04-homework/weatherapi.ipynb
+++ b/04-homework/weatherapi.ipynb
@@ -46,7 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_cupertino = \"http://api.weatherapi.com/v1/current.json?key=1a6fa10583f54fcdbfa115430210411&q=95014&aqi=no\"\n",
+    "apikey = ''\n",
+    "\n",
+    "url_cupertino = \"http://api.weatherapi.com/v1/current.json?{apikey}&q=95014&aqi=no\"\n",
     "\n",
     "response_cupertino = requests.get(url_cupertino)\n",
     "data_cupertino = response_cupertino.json()"
@@ -153,7 +155,7 @@
    "outputs": [],
    "source": [
     "# The API endpoint is http://api.weatherapi.com/v1/astronomy.json\n",
-    "url_moon = \"http://api.weatherapi.com/v1/astronomy.json?key=1a6fa10583f54fcdbfa115430210411&q=Cupertino&dt=2021-11-09\"\n",
+    "url_moon = \"http://api.weatherapi.com/v1/astronomy.json?key={apikey}&q=Cupertino&dt=2021-11-09\"\n",
     "\n",
     "response_moon = requests.get(url_moon)\n",
     "data_moon = response_moon.json()"
@@ -194,7 +196,7 @@
    "outputs": [],
    "source": [
     "# No max/min temp in the current temperatures for the day -- need to look at the forecast\n",
-    "url_forecast = \"http://api.weatherapi.com/v1/forecast.json?key=1a6fa10583f54fcdbfa115430210411&q=Cupertino&days=3&aqi=no&alerts=no\"\n",
+    "url_forecast = \"http://api.weatherapi.com/v1/forecast.json?key={apikey}&q=Cupertino&days=3&aqi=no&alerts=no\"\n",
     "\n",
     "response_forecast = requests.get(url_forecast)\n",
     "data_forecast = response_forecast.json()"
@@ -246,7 +248,7 @@
     "\n",
     "# Marked below are all the places where variables had to be renamed\n",
     "# url field here:\n",
-    "# url_moon = \"http://api.weatherapi.com/v1/astronomy.json?key=1a6fa10583f54fcdbfa115430210411&q=Cupertino&dt=2021-11-09\"\n",
+    "# url_moon = \"http://api.weatherapi.com/v1/astronomy.json?key={apikey}&q=Cupertino&dt=2021-11-09\"\n",
     "# # response and url field here:\n",
     "# response_moon = requests.get(url_moon)\n",
     "# # data and response field here:\n",
@@ -315,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_forecast7 = \"http://api.weatherapi.com/v1/forecast.json?key=1a6fa10583f54fcdbfa115430210411&q=Cupertino&days=7&aqi=no&alerts=no\"\n",
+    "url_forecast7 = \"http://api.weatherapi.com/v1/forecast.json?key={apikey}&q=Cupertino&days=7&aqi=no&alerts=no\"\n",
     "\n",
     "response_forecast7 = requests.get(url_forecast)\n",
     "data_forecast7 = response_forecast7.json()"
@@ -410,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_miami = \"http://api.weatherapi.com/v1/forecast.json?key=1a6fa10583f54fcdbfa115430210411&q=Miami&days=1&aqi=no&alerts=no\"\n",
+    "url_miami = \"http://api.weatherapi.com/v1/forecast.json?key={apikey}&q=Miami&days=1&aqi=no&alerts=no\"\n",
     "\n",
     "response_miami = requests.get(url_miami)\n",
     "data_miami = response_miami.json()"
